# beBrivus

./: APPLICATION_STRUCTURE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROFILE_PAGE.md  README.md
backend/: .env  .env.example  BOOKING_API.md  db.sqlite3  debug_opportunity_creation.py  pyproject.toml  test_admin_endpoints.py  test_categories_api.py  test_full_admin_functionality.py  test_opportunities_api.py
backend/apps/accounts/: admin_urls.py  admin_views.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/ai_services/: gemini_service.py  models.py  serializers.py  urls.py  views.py
backend/apps/ai_services/migrations/: 0001_initial.py
backend/apps/applications/: models.py  serializers.py  urls.py  views.py
backend/apps/applications/migrations/: 0001_initial.py  0002_initial.py  0003_alter_application_unique_together_and_more.py  (+1 more)
backend/apps/forum/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/gamification/: models.py  serializers.py  urls.py  views.py
backend/apps/mentors/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/messaging/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/opportunities/: models.py  serializers.py  urls.py  views.py
backend/apps/resources/: models.py  serializers.py  urls.py  views.py
backend/apps/tracker/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/video/: __init__.py  consumers.py  routing.py
backend/core/: asgi.py  settings.py  urls.py
frontend/: index.html  package.json  (+1 more)
(+88 files in other folders)
